--- a/pelanggan_info.html
+++ b/pelanggan_info.html
@@ -148,7 +148,7 @@
 
                 <!-- Confirm Payment Button -->
                 <div class="px-0 py-3">
-                    <button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-12 px-5 bg-[#6366f1] text-white text-base font-bold leading-normal tracking-[0.015em] w-full" id="confirm-transfer-btn">
+                    <button class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-12 px-5 bg-[#6366f1] text-white text-base font-bold leading-normal tracking-[0.015em] w-full" id="confirm-transfer-btn">
                         <span class="truncate">Konfirmasi Pembayaran</span>
                     </button>
                 </div>
