--- a/pelanggan_profile.html
+++ b/pelanggan_profile.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="px-4 py-6">
-                    <button id="logout-btn" class="w-full flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#5324e0] text-[#f9f8fb] text-base font-bold">
+                    <button id="logout-btn" class="w-full flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#683fe4] text-[#f9f8fb] text-base font-bold">
                         <span class="truncate">Logout</span>
                     </button>
                 </div>
