--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -35,6 +35,18 @@
           <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Pengeluaran</h2>
         </header>
 
+        <!-- Search Input -->
+        <div class="px-4 py-3">
+          <label class="flex flex-col min-w-40 h-12 w-full">
+            <div class="flex w-full flex-1 items-stretch rounded-lg h-full">
+              <div class="text-[#625095] flex border-none bg-[#eae8f3] items-center justify-center pl-4 rounded-l-lg border-r-0">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"></path></svg>
+              </div>
+              <input id="search-input" placeholder="Cari pengeluaran..." class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#110e1b] focus:outline-0 focus:ring-0 border-none bg-[#eae8f3] h-full placeholder:text-[#625095] px-4 rounded-l-none pl-2 text-base"/>
+            </div>
+          </label>
+        </div>
+
         <div id="expense-list">
             </div>
       </div>
