--- a/dashboard.html
+++ b/dashboard.html
@@ -38,7 +38,7 @@
         
         .gradient-card-1 {
             /* Profit: Biru Navy ke Ungu Tua */
-            background: linear-gradient(135deg, #302b63 0%, #24243e 100%);
+            background: linear-gradient(135deg, #9969C7 0%, #6A359C 100%);
         }
          
         .gradient-card-2 {
@@ -270,7 +270,7 @@
             <!-- Customer Growth Chart (New vs Churn) -->
             <div class="bg-white rounded-2xl shadow-lg p-6">
               <div class="flex items-center justify-between mb-4">
-                <h4 class="text-base font-semibold text-gray-800">Akuisisi vs Churn</h4>
+                <h4 class="text-base font-semibold text-gray-800">Pasang vs Cabut</h4>
                 <div class="flex items-center gap-2">
                   <div class="w-3 h-3 bg-green-500 rounded-full"></div>
                   <span class="text-xs text-gray-600">Baru vs Berhenti</span>
