--- a/dashboard.html
+++ b/dashboard.html
@@ -192,6 +192,20 @@
             0% { background-position: 200% 0; }
             100% { background-position: -200% 0; }
         }
+
+        /* Chart loading skeleton */
+        .chart-loading-skeleton {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 8px;
+        }
     </style>
 </head>
 <body>
@@ -202,15 +216,20 @@
         
         <!-- Modern Header with gradient - mobile optimized -->
         <header class="header-gradient shadow-lg">
-          <div class="px-4 py-6">
-            <h2 class="text-white text-xl font-bold leading-tight text-center mb-1">Dasbor</h2>
-            <p class="text-white/80 text-xs text-center">Selinggonet Management System</p>
-            <p class="text-white/80 text-xs text-center" id="current-datetime">Loading...</p>
+          <div class="flex items-center justify-between px-4 py-6">
+            <div>
+              <h2 id="user-greeting" class="text-white text-xl font-bold leading-tight">Memuat...</h2>
+              <p id="user-email" class="text-white/80 text-xs">...</p>
+            </div>
+            <button id="dashboard-logout-btn" class="w-10 h-10 flex items-center justify-center text-white rounded-full hover:bg-white/20 transition-colors">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 256 256"><path d="M112,216a8,8,0,0,1-8,8H48a16,16,0,0,1-16-16V48A16,16,0,0,1,48,32h56a8,8,0,0,1,0,16H48V208h56A8,8,0,0,1,112,216Zm109.66-93.66-40-40a8,8,0,0,0-11.32,11.32L184.69,108H104a8,8,0,0,0,0,16h80.69l-14.35,14.34a8,8,0,0,0,11.32,11.32l40-40A8,8,0,0,0,221.66,122.34Z"></path></svg>
+            </button>
           </div>
           
-          <!-- Modern Filters -->
-          <div class="px-6 pb-6">
-            <div class="flex gap-4">
+          <!-- Date time and Filters -->
+          <div class="px-4 pb-6 text-center">
+             <p class="text-white/80 text-xs mb-4" id="current-datetime">Loading...</p>
+             <div class="flex gap-4 max-w-md mx-auto">
               <div class="flex-1">
                 <select id="filter-bulan" class="modern-select w-full h-14 px-6 bg-white/20 border-0 rounded-2xl text-white text-sm font-medium placeholder-white/70 focus:outline-none focus:ring-2 focus:ring-white/30 appearance-none backdrop-blur-sm">
                   <!-- Options will be populated by JavaScript -->
@@ -270,10 +289,10 @@
             <!-- Customer Growth Chart (New vs Churn) -->
             <div class="bg-white rounded-2xl shadow-lg p-6">
               <div class="flex items-center justify-between mb-4">
-                <h4 class="text-base font-semibold text-gray-800">Pasang vs Cabut</h4>
+                <h4 class="text-base font-semibold text-gray-800">Pertumbuhan Pelanggan Bersih</h4>
                 <div class="flex items-center gap-2">
                   <div class="w-3 h-3 bg-green-500 rounded-full"></div>
-                  <span class="text-xs text-gray-600">Baru vs Berhenti</span>
+                  <span class="text-xs text-gray-600">Baru vs Cabut</span>
                 </div>
               </div>
               <div class="chart-container">
