--- a/pelanggan_info.html
+++ b/pelanggan_info.html
@@ -48,7 +48,7 @@
                         <div class="flex-1">
                             <h3 class="text-blue-900 font-semibold text-base mb-2">Cara Pembayaran</h3>
                             <div class="text-blue-800 text-sm leading-relaxed space-y-2">
-                                <p>Silakan lakukan pembayaran ke salah satu rekening yang tertera di bawah ini, kemudian klik tombol <span class="font-medium text-blue-900">Konfirmasi Pembayaran</span>.</p>
+                                <p>Silakan lakukan pembayaran ke salah satu rekening atau qris yang tertera di bawah ini, kemudian klik tombol <span class="font-medium text-blue-900">Konfirmasi Pembayaran</span>.</p>
                                 <div class="bg-white bg-opacity-60 rounded-lg p-3 mt-3 border border-blue-100">
                                     <div class="flex items-start gap-2">
                                         <div class="flex-shrink-0 w-5 h-5 bg-orange-100 rounded-full flex items-center justify-center mt-0.5">
@@ -70,6 +70,15 @@
 
             <!-- Payment Cards -->
             <div class="px-4 pb-20">
+                <!-- QRIS Card -->
+                <div class="bg-white p-4 rounded-lg mb-3 border border-[#e7edf3] text-center">
+                    <p class="text-[#110e1b] text-sm font-semibold leading-normal mb-2">Pembayaran via QRIS</p>
+                    <div class="flex justify-center mb-2">
+                        <img src="assets/qris.jpeg" alt="QRIS Code" class="w-auto h-auto max-w-xs max-h-64 object-contain rounded-md shadow-sm">
+                    </div>
+                    <p class="text-xs text-gray-500">Scan untuk membayar. Pastikan jumlah transfer sesuai tagihan.</p>
+                </div>
+
                 <!-- SeaBank Card -->
                 <div class="flex items-start gap-3 bg-white px-4 py-3 rounded-lg mb-3 border border-[#e7edf3]">
                     <div class="text-[#110e1b] flex items-center justify-center rounded-lg bg-[#f0f2f4] shrink-0 size-10">
