--- a/pelanggan_riwayat_lunas.html
+++ b/pelanggan_riwayat_lunas.html
@@ -105,6 +105,106 @@
     <script type="module" src="supabase-client.js"></script>
     <script type="module" src="auth.js"></script>
     <script type="module" src="pelanggan_riwayat_lunas.js"></script>
+
+    <!-- Payment Modal -->
+    <!-- Toast Notification -->
+    <div id="toast" class="fixed top-5 right-5 bg-gray-800 text-white py-2 px-4 rounded-lg shadow-lg transform translate-x-[120%] transition-transform duration-300 ease-in-out z-[150]">
+        <span id="toast-message"></span>
+    </div>
+
+    <div id="payment-modal" class="fixed inset-0 z-[100] flex items-center justify-center bg-black bg-opacity-60 hidden backdrop-blur-sm">
+        <div class="relative bg-white rounded-2xl shadow-xl w-full max-w-md m-4 transform transition-all duration-300 ease-out scale-95 opacity-0" id="modal-content">
+            <!-- Modal Header -->
+            <div class="flex items-center justify-between p-4 border-b border-gray-200 rounded-t-2xl bg-gray-50">
+                <h3 class="text-lg font-semibold text-gray-800">Pilih Metode Pembayaran</h3>
+                <button id="close-modal-btn" class="text-gray-400 hover:text-gray-600 focus:outline-none">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+                </button>
+            </div>
+
+            <!-- Invoice Details -->
+            <div class="p-4 bg-indigo-50 border-b border-gray-200">
+                <p class="text-sm text-gray-600">Tagihan untuk:</p>
+                <p id="modal-invoice-period" class="font-bold text-gray-800 text-lg"></p>
+                <p id="modal-invoice-amount" class="font-semibold text-indigo-600 text-2xl"></p>
+            </div>
+
+            <!-- Modal Body -->
+            <div class="p-6">
+                <!-- Tabs -->
+                <div class="flex border-b border-gray-200 mb-4">
+                    <button id="qris-tab" class="payment-tab active flex-1 py-2 text-center font-medium text-indigo-600 border-b-2 border-indigo-600">QRIS</button>
+                    <button id="transfer-tab" class="payment-tab flex-1 py-2 text-center font-medium text-gray-500">Transfer Manual</button>
+                </div>
+
+                <!-- Tab Content -->
+                <div id="qris-content" class="payment-content">
+                    <p class="text-center text-gray-600 mb-4 text-sm">Scan QR code di bawah ini menggunakan aplikasi pembayaran favorit Anda.</p>
+                    <div class="flex justify-center">
+                         <img src="assets/qris.jpeg" alt="QRIS Code" class="w-auto h-auto max-w-xs max-h-80 object-contain rounded-lg shadow-md">
+                    </div>
+                    <p class="text-center text-xs text-gray-500 mt-4">QRIS ini statis. Pastikan jumlah transfer sesuai dengan tagihan.</p>
+                </div>
+
+                <div id="transfer-content" class="payment-content hidden">
+                    <div class="space-y-3">
+                        <!-- SeaBank -->
+                        <div class="flex items-center justify-between bg-gray-50 p-3 rounded-lg border">
+                            <div>
+                                <p class="font-semibold text-gray-800">SeaBank</p>
+                                <p id="seabank-number" class="font-mono text-gray-700">901307925714</p>
+                                <p class="text-xs text-gray-500">a.n. TAUFIQ AZIZ</p>
+                            </div>
+                            <button class="copy-btn p-2 rounded-md bg-indigo-100 text-indigo-600 hover:bg-indigo-200" onclick="copyToClipboard('seabank-number', this)">
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM5 11a1 1 0 100 2h4a1 1 0 100-2H5z"></path><path fill-rule="evenodd" d="M2 5a2 2 0 012-2h12a2 2 0 012 2v10a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm2-1a1 1 0 00-1 1v10a1 1 0 001 1h12a1 1 0 001-1V5a1 1 0 00-1-1H4z" clip-rule="evenodd"></path></svg>
+                            </button>
+                        </div>
+                        <!-- BCA -->
+                        <div class="flex items-center justify-between bg-gray-50 p-3 rounded-lg border">
+                            <div>
+                                <p class="font-semibold text-gray-800">BCA</p>
+                                <p id="bca-number" class="font-mono text-gray-700">3621053653</p>
+                                <p class="text-xs text-gray-500">a.n. TAUFIQ AZIZ</p>
+                            </div>
+                            <button class="copy-btn p-2 rounded-md bg-indigo-100 text-indigo-600 hover:bg-indigo-200" onclick="copyToClipboard('bca-number', this)">
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM5 11a1 1 0 100 2h4a1 1 0 100-2H5z"></path><path fill-rule="evenodd" d="M2 5a2 2 0 012-2h12a2 2 0 012 2v10a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm2-1a1 1 0 00-1 1v10a1 1 0 001 1h12a1 1 0 001-1V5a1 1 0 00-1-1H4z" clip-rule="evenodd"></path></svg>
+                            </button>
+                        </div>
+                        <!-- BSI -->
+                        <div class="flex items-center justify-between bg-gray-50 p-3 rounded-lg border">
+                            <div>
+                                <p class="font-semibold text-gray-800">BSI</p>
+                                <p id="bsi-number" class="font-mono text-gray-700">7211806138</p>
+                                <p class="text-xs text-gray-500">a.n. TAUFIQ AZIZ</p>
+                            </div>
+                            <button class="copy-btn p-2 rounded-md bg-indigo-100 text-indigo-600 hover:bg-indigo-200" onclick="copyToClipboard('bsi-number', this)">
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM5 11a1 1 0 100 2h4a1 1 0 100-2H5z"></path><path fill-rule="evenodd" d="M2 5a2 2 0 012-2h12a2 2 0 012 2v10a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm2-1a1 1 0 00-1 1v10a1 1 0 001 1h12a1 1 0 001-1V5a1 1 0 00-1-1H4z" clip-rule="evenodd"></path></svg>
+                            </button>
+                        </div>
+                        <!-- DANA -->
+                        <div class="flex items-center justify-between bg-gray-50 p-3 rounded-lg border">
+                            <div>
+                                <p class="font-semibold text-gray-800">DANA</p>
+                                <p id="dana-number" class="font-mono text-gray-700">089609497390</p>
+                                <p class="text-xs text-gray-500">a.n. TAUFIQ AZIZ</p>
+                            </div>
+                            <button class="copy-btn p-2 rounded-md bg-indigo-100 text-indigo-600 hover:bg-indigo-200" onclick="copyToClipboard('dana-number', this)">
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM5 11a1 1 0 100 2h4a1 1 0 100-2H5z"></path><path fill-rule="evenodd" d="M2 5a2 2 0 012-2h12a2 2 0 012 2v10a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm2-1a1 1 0 00-1 1v10a1 1 0 001 1h12a1 1 0 001-1V5a1 1 0 00-1-1H4z" clip-rule="evenodd"></path></svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal Footer -->
+            <div class="px-6 py-4 bg-gray-50 rounded-b-2xl">
+                <button id="confirm-payment-btn" class="w-full flex items-center justify-center gap-2 bg-green-500 text-white font-bold py-3 px-4 rounded-lg hover:bg-green-600 transition-colors duration-200">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 256 256"><path d="M222.9,143.21l-32.2,32.19a15.89,15.89,0,0,1-22.48,0l-32.2-32.19a15.9,15.9,0,0,1,22.48-22.48L176,136.15V40a8,8,0,0,0-16,0v96.15l-14.9-15.42a15.9,15.9,0,0,0-22.48,22.48l32.2,32.19a15.89,15.89,0,0,0,22.48,0l32.2-32.19a15.9,15.9,0,0,0-22.48-22.48Z" opacity="0.2"></path><path d="M216,40H40A16,16,0,0,0,24,56V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A16,16,0,0,0,216,40ZM40,56H216V200H40ZM178.5,123.06a8,8,0,0,1,0,11.31l-32.2,32.2a8,8,0,0,1-11.31,0l-32.2-32.2a8,8,0,0,1,11.31-11.31L128,136.69V88a8,8,0,0,1,16,0v48.69l13.75-14.32A8,8,0,0,1,178.5,123.06Z"></path></svg>
+                    Konfirmasi Pembayaran via WhatsApp
+                </button>
+            </div>
+        </div>
+    </div>
     
     <style>
         /* Tab Styles */
