--- a/pelanggan_dashboard.html
+++ b/pelanggan_dashboard.html
@@ -180,7 +180,7 @@
                             <path d="M136,80v43.47l36.12,21.67a8,8,0,0,1-8.24,13.72l-40-24A8,8,0,0,1,120,128V80a8,8,0,0,1,16,0Zm-8-48A95.44,95.44,0,0,0,60.08,60.15C52.81,67.51,46.35,74.59,40,82V64a8,8,0,0,0-16,0v40a8,8,0,0,0,8,8H72a8,8,0,0,0,0-16H49c7.15-8.42,14.27-16.35,22.39-24.57a80,80,0,1,1,1.66,114.75,8,8,0,1,0-11,11.64A96,96,0,1,0,128,32Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">History</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Riwayat</p>
                 </a>
                 <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan_info.html">
                     <div class="text-[#625095] flex h-8 items-center justify-center">
@@ -188,7 +188,7 @@
                             <path d="M224,48H32A16,16,0,0,0,16,64V192a16,16,0,0,0,16,16H224a16,16,0,0,0,16-16V64A16,16,0,0,0,224,48Zm0,16V88H32V64Zm0,128H32V104H224v88Zm-16-24a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h32A8,8,0,0,1,208,168Zm-64,0a8,8,0,0,1-8,8H120a8,8,0,0,1,0-16h16A8,8,0,0,1,144,168Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Payment</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Info Bayar</p>
                 </a>
                 <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan_profile.html">
                     <div class="text-[#625095] flex h-8 items-center justify-center">
