--- a/pelanggan_info.html
+++ b/pelanggan_info.html
@@ -33,7 +33,7 @@
                         <path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path>
                     </svg>
                 </div>
-                <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Payment Info</h2>
+                <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Inforamasi Pembayaran</h2>
             </div>
 
             <!-- Payment Instructions Card -->
@@ -71,12 +71,13 @@
             <!-- Payment Cards -->
             <div class="px-4 pb-20">
                 <!-- QRIS Card -->
+                <!-- QRIS Card -->
                 <div class="bg-white p-4 rounded-lg mb-3 border border-[#e7edf3] text-center">
                     <p class="text-[#110e1b] text-sm font-semibold leading-normal mb-2">Pembayaran via QRIS</p>
                     <div class="flex justify-center mb-2">
-                        <img src="assets/qris.jpeg" alt="QRIS Code" class="w-auto h-auto max-w-xs max-h-64 object-contain rounded-md shadow-sm">
+                        <img id="qris-image" src="assets/qris.jpeg" alt="QRIS Code" class="w-auto h-auto max-w-xs max-h-64 object-contain rounded-md shadow-sm cursor-pointer hover:opacity-80 transition-opacity">
                     </div>
-                    <p class="text-xs text-gray-500">Scan untuk membayar. Pastikan jumlah transfer sesuai tagihan.</p>
+                    <p class="text-xs text-gray-500">Ketuk gambar untuk memperbesar.</p>
                 </div>
 
                 <!-- SeaBank Card -->
@@ -181,7 +182,7 @@
                             <path d="M136,80v43.47l36.12,21.67a8,8,0,0,1-8.24,13.72l-40-24A8,8,0,0,1,120,128V80a8,8,0,0,1,16,0Zm-8-48A95.44,95.44,0,0,0,60.08,60.15C52.81,67.51,46.35,74.59,40,82V64a8,8,0,0,0-16,0v40a8,8,0,0,0,8,8H72a8,8,0,0,0,0-16H49c7.15-8.42,14.27-16.35,22.39-24.57a80,80,0,1,1,1.66,114.75,8,8,0,1,0-11,11.64A96,96,0,1,0,128,32Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">History</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Riwayat</p>
                 </a>
                 <a class="flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#5324e0]" href="pelanggan_info.html">
                     <div class="text-[#5324e0] flex h-8 items-center justify-center">
@@ -189,7 +190,7 @@
                             <path d="M224,48H32A16,16,0,0,0,16,64V192a16,16,0,0,0,16,16H224a16,16,0,0,0,16-16V64A16,16,0,0,0,224,48Zm0,16V88H32V64Zm0,128H32V104H224v88Zm-16-24a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h32A8,8,0,0,1,208,168Zm-64,0a8,8,0,0,1-8,8H120a8,8,0,0,1,0-16h16A8,8,0,0,1,144,168Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#5324e0] text-xs font-medium leading-normal tracking-[0.015em]">Payment</p>
+                    <p class="text-[#5324e0] text-xs font-medium leading-normal tracking-[0.015em]">Info Bayar</p>
                 </a>
                 <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan_profile.html">
                     <div class="text-[#625095] flex h-8 items-center justify-center">
@@ -213,5 +214,15 @@
     <script src="logo-navigation.js"></script>
     <script type="module" src="pelanggan_info.js"></script>
     <script src="pwa-installer.js"></script>
+
+    <!-- QRIS Fullscreen Modal -->
+    <div id="qris-modal" class="fixed inset-0 z-[100] flex items-center justify-center bg-black bg-opacity-80 hidden backdrop-blur-sm p-4">
+        <div class="relative">
+            <img src="assets/qris.jpeg" alt="QRIS Code Fullscreen" class="max-w-full max-h-[80vh] object-contain rounded-lg">
+            <button id="close-qris-modal" class="absolute -top-4 -right-4 text-white bg-gray-800 rounded-full p-1 focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+            </button>
+        </div>
+    </div>
 </body>
 </html>
