--- a/pelanggan_riwayat_lunas.html
+++ b/pelanggan_riwayat_lunas.html
@@ -80,7 +80,7 @@
                             <path d="M224,128A96,96,0,0,1,62.11,197.82a8,8,0,1,1,11-11.64A80,80,0,1,0,71.43,71.43C67.9,75,64.58,78.51,61.35,82L77.66,98.34A8,8,0,0,1,72,112H32a8,8,0,0,1-8-8V64a8,8,0,0,1,13.66-5.66L50,70.7c3.22-3.49,6.54-7,10.06-10.55A96,96,0,0,1,224,128ZM128,72a8,8,0,0,0-8,8v48a8,8,0,0,0,3.88,6.86l40,24a8,8,0,1,0,8.24-13.72L136,123.47V80A8,8,0,0,0,128,72Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#5324e0] text-xs font-medium leading-normal tracking-[0.015em]">History</p>
+                    <p class="text-[#5324e0] text-xs font-medium leading-normal tracking-[0.015em]">Riwayat</p>
                 </a>
                 <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan_info.html">
                     <div class="text-[#625095] flex h-8 items-center justify-center">
@@ -88,7 +88,7 @@
                             <path d="M224,48H32A16,16,0,0,0,16,64V192a16,16,0,0,0,16,16H224a16,16,0,0,0,16-16V64A16,16,0,0,0,224,48Zm0,16V88H32V64Zm0,128H32V104H224v88Zm-16-24a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h32A8,8,0,0,1,208,168Zm-64,0a8,8,0,0,1-8,8H120a8,8,0,0,1,0-16h16A8,8,0,0,1,144,168Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Payment</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Info Bayar</p>
                 </a>
                 <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan_profile.html">
                     <div class="text-[#625095] flex h-8 items-center justify-center">
@@ -108,7 +108,7 @@
 
     <!-- Payment Modal -->
     <!-- Toast Notification -->
-    <div id="toast" class="fixed top-5 right-5 bg-gray-800 text-white py-2 px-4 rounded-lg shadow-lg transform translate-x-[120%] transition-transform duration-300 ease-in-out z-[150]">
+    <div id="toast" class="fixed top-5 right-5 bg-green-500 text-white py-2 px-4 rounded-lg shadow-lg opacity-0 invisible transition-all duration-300 ease-in-out z-[150]">
         <span id="toast-message"></span>
     </div>
 
