--- a/tagihan.html
+++ b/tagihan.html
@@ -85,7 +85,7 @@
         </div>
         
         <!-- Fixed Floating Add Button (styled like pelanggan page) -->
-        <button id="add-invoice-btn" class="fixed bottom-28 right-5 z-40 flex items-center justify-center w-14 h-14 rounded-full bg-[#683fe4] text-[#f9f8fb] shadow-lg">
+        <button id="add-invoice-btn" class="fixed bottom-[84px] right-5 z-40 flex items-center justify-center w-14 h-14 rounded-full bg-[#683fe4] text-[#f9f8fb] shadow-lg">
           <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
             <path d="M224,128a8,8,0,0,1-8,8H136v80a8,8,0,0,1-16,0V136H40a8,8,0,0,1,0-16h80V40a8,8,0,0,1,16,0v80h80A8,8,0,0,1,224,128Z"></path>
           </svg>
