Fix: Implement cache busting for JS files

--- a/tagihan.html
+++ b/tagihan.html
@@ -163,7 +163,7 @@
 
         <script src="config.js"></script>
     <script src="auth.js"></script>
-    <script type="module" src="tagihan.js"></script>
+    <script type="module" src="tagihan.js?v=1.1"></script>
     <script src="logo-navigation.js"></script>
     <script src="datetime-display.js"></script>
     <script src="pwa-installer.js"></script>
