--- a/pelanggan.html
+++ b/pelanggan.html
@@ -82,11 +82,11 @@
                 <div class="flex flex-col gap-1 border-t py-4 pr-2"><p class="text-[#625095] text-sm">WHATSAPP</p><p id="detail-whatsapp" class="text-[#110e1b] text-sm">-</p></div>
                 <div class="flex flex-col gap-1 border-t py-4 pl-2"><p class="text-[#625095] text-sm">EMAIL</p><p id="detail-email" class="text-[#110e1b] text-sm">-</p></div>
                 <div class="flex flex-col gap-1 border-t py-4 pr-2"><p class="text-[#625095] text-sm">PAKET</p><p id="detail-paket" class="text-[#110e1b] text-sm">-</p></div>
-                <div class="flex flex-col gap-1 border-t py-4 pr-2"><p class="text-[#625095] text-sm">TAGIHAN</p><p id="detail-tagihan" class="text-[#110e1b] text-sm">-</p></div>
-                <div class="flex flex-col gap-1 border-t py-4 pl-2"><p class="text-[#625095] text-sm">STATUS</p><p id="detail-status" class="text-[#110e1b] text-sm">-</p></div>
-                <div class="flex flex-col gap-1 border-t py-4 pr-2"><p class="text-[#625095] text-sm">TANGGAL PASANG</p><p id="detail-tanggal-pasang" class="text-[#110e1b] text-sm">-</p></div>
-                <div class="flex flex-col gap-1 border-t py-4 pl-2"><p class="text-[#625095] text-sm">JENIS PERANGKAT</p><p id="detail-jenis-perangkat" class="text-[#110e1b] text-sm">-</p></div>
-                <div class="flex flex-col gap-1 border-t py-4 pr-2 col-span-2"><p class="text-[#625095] text-sm">IP STATIC/PPOE</p><p id="detail-ip-static" class="text-[#110e1b] text-sm">-</p></div>
+                <div class="flex flex-col gap-1 border-t py-4 pl-2"><p class="text-[#625095] text-sm">TAGIHAN</p><p id="detail-tagihan" class="text-[#110e1b] text-sm">-</p></div>
+                <div class="flex flex-col gap-1 border-t py-4 pr-2"><p class="text-[#625095] text-sm">STATUS</p><p id="detail-status" class="text-[#110e1b] text-sm">-</p></div>
+                <div class="flex flex-col gap-1 border-t py-4 pl-2"><p class="text-[#625095] text-sm">TANGGAL PASANG</p><p id="detail-tanggal-pasang" class="text-[#110e1b] text-sm">-</p></div>
+                <div class="flex flex-col gap-1 border-t py-4 pr-2"><p class="text-[#625095] text-sm">JENIS PERANGKAT</p><p id="detail-jenis-perangkat" class="text-[#110e1b] text-sm">-</p></div>
+                <div class="flex flex-col gap-1 border-t py-4 pl-2"><p class="text-[#625095] text-sm">IP STATIC/PPOE</p><p id="detail-ip-static" class="text-[#110e1b] text-sm">-</p></div>
             </div>
             <div id="unpaid-bills-section" class="hidden"><h2 class="text-[#110e1b] text-xl font-bold px-4 pb-3 pt-5">Tagihan Belum Dibayar</h2><div id="unpaid-bills-list"></div></div>
             <div class="p-4"><button id="edit-customer-detail-btn" class="flex w-full cursor-pointer items-center justify-center rounded-lg h-12 px-5 bg-[#683fe4] text-[#f9f8fb] text-base font-bold">Edit Pelanggan</button></div>
