--- a/dashboard.html
+++ b/dashboard.html
@@ -223,9 +223,12 @@
         <!-- Modern Header with gradient - mobile optimized -->
         <header class="header-gradient shadow-lg">
           <div class="flex items-center justify-between px-4 py-6">
-            <div>
-              <h2 id="user-greeting" class="text-white text-xl font-bold leading-tight">Memuat...</h2>
-              <p id="user-email" class="text-white/80 text-xs">...</p>
+            <div class="flex items-center gap-4">
+              <div id="user-avatar" class="w-12 h-12 rounded-full bg-cover bg-center bg-white/30 shadow-inner"></div>
+              <div>
+                <h2 id="user-greeting" class="text-white text-xl font-bold leading-tight">Memuat...</h2>
+                <p id="user-email" class="text-white/80 text-xs">...</p>
+              </div>
             </div>
     
             <div class="flex items-center gap-2">
