--- a/pelanggan_dashboard.html
+++ b/pelanggan_dashboard.html
@@ -142,9 +142,12 @@
         <!-- Modern Header with gradient - mobile optimized -->
         <header class="header-gradient shadow-lg">
           <div class="flex items-center justify-between px-4 py-6">
-            <div>
-              <h2 id="welcome-text" class="text-white text-xl font-bold leading-tight">Hallo, Pelanggan</h2>
-              <p id="customer-email" class="text-white/80 text-xs">...</p>
+            <div class="flex items-center gap-4">
+              <div id="user-avatar" class="w-12 h-12 rounded-full bg-cover bg-center bg-white/30 shadow-inner"></div>
+              <div>
+                <h2 id="welcome-text" class="text-white text-xl font-bold leading-tight">Hallo, Pelanggan</h2>
+                <p id="customer-email" class="text-white/80 text-xs">...</p>
+              </div>
             </div>
             <button id="customer-logout-btn" class="w-10 h-10 flex items-center justify-center text-white rounded-full hover:bg-white/20 transition-colors">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 256 256"><path d="M112,216a8,8,0,0,1-8,8H48a16,16,0,0,1-16-16V48A16,16,0,0,1,48,32h56a8,8,0,0,1,0,16H48V208h56A8,8,0,0,1,112,216Zm109.66-93.66-40-40a8,8,0,0,0-11.32,11.32L184.69,108H104a8,8,0,0,0,0,16h80.69l-14.35,14.34a8,8,0,0,0,11.32,11.32l40-40A8,8,0,0,0,221.66,122.34Z"></path></svg>
