--- a/pelanggan_profile.html
+++ b/pelanggan_profile.html
@@ -37,8 +37,14 @@
                 <div class="flex p-4 @container">
                     <div class="flex w-full flex-col gap-4 items-center">
                         <div class="flex gap-4 flex-col items-center">
-                            <div id="profileAvatar" class="bg-center bg-no-repeat aspect-square bg-cover rounded-full min-h-32 w-32 flex items-center justify-center bg-gray-300"></div>
-                            <div class="flex flex-col items-center justify-center">
+                            <div class="relative group cursor-pointer" id="avatarContainer">
+                                <div id="profileAvatar" class="bg-center bg-no-repeat aspect-square bg-cover rounded-full min-h-32 w-32 flex items-center justify-center bg-gray-300 shadow-inner"></div>
+                                <div class="absolute bottom-1 right-1 flex items-center justify-center size-8 bg-white rounded-full shadow-md group-hover:bg-gray-100 transition-colors">
+                                    <svg class="text-gray-700" xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" fill="currentColor" viewBox="0 0 256 256"><path d="M227.31,73.37,182.63,28.69a16,16,0,0,0-22.63,0L36.69,152A15.86,15.86,0,0,0,32,163.31V208a16,16,0,0,0,16,16H92.69A15.86,15.86,0,0,0,104,219.31L227.31,96A16,16,0,0,0,227.31,73.37ZM92.69,208H48V163.31l88-88L180.69,120ZM192,108.69,147.31,64l24-24L216,84.69Z"></path></svg>
+                                </div>
+                            </div>
+                            <input type="file" id="avatarUpload" accept="image/*" class="hidden">
+                            <div class="flex flex-col items-center justify-center mt-2">
                                 <p id="customerName" class="text-[#110e1b] text-[22px] font-bold leading-tight tracking-[-0.015em] text-center">Memuat...</p>
                                 <p id="customerEmail" class="text-[#625095] text-base font-normal leading-normal text-center">Memuat...</p>
                             </div>
@@ -80,9 +86,9 @@
                        <input id="edit-nama" class="form-input w-full rounded-lg text-[#110e1b] border border-[#d6d0e7] bg-white h-12 p-3 text-base" />
                    </label>
                    <label class="flex flex-col">
-                       <p class="text-[#110e1b] text-sm font-medium leading-normal pb-2">Username</p>
+                       <p class="text-[#110e1b] text-sm font-medium leading-normal pb-2">Email</p>
                        <input id="edit-user" class="form-input w-full rounded-lg text-gray-500 border border-[#d6d0e7] bg-gray-100 h-12 p-3 text-base" readonly />
-                       <small class="text-xs text-gray-400 mt-1">Username tidak dapat diubah.</small>
+                       <small class="text-xs text-gray-400 mt-1">Email tidak dapat diubah.</small>
                    </label>
                    <label class="flex flex-col">
                        <p class="text-[#110e1b] text-sm font-medium leading-normal pb-2">Password Baru</p>
