tambah fitur upload csv fix

--- a/pelanggan.html
+++ b/pelanggan.html
@@ -183,6 +183,13 @@
                   <div><input id="customer-device" placeholder="Jenis Perangkat (Opsional)" class="form-input w-full rounded-lg bg-[#eae8f3] h-14 p-4 text-base" /></div>
                   <div><input id="customer-ip" placeholder="IP STATIC / PPOE (Opsional)" class="form-input w-full rounded-lg bg-[#eae8f3] h-14 p-4 text-base" /></div>
                   
+                  <!-- Tanggal Instalasi -->
+                  <div class="border-t border-gray-300 pt-4 mt-2">
+                    <label for="customer-installation-date" class="text-sm font-medium text-gray-600 mb-2 block">Tanggal Instalasi</label>
+                    <input id="customer-installation-date" type="date" class="form-input w-full rounded-lg bg-[#eae8f3] h-14 p-4 text-base" />
+                    <p class="text-xs text-gray-500 mt-1">Kosongkan untuk menggunakan tanggal hari ini</p>
+                  </div>
+                  
                   <!-- Lokasi (Latitude & Longitude) -->
                   <div class="border-t border-gray-300 pt-4 mt-2">
                     <p class="text-sm font-medium text-gray-600 mb-3">Lokasi (Opsional)</p>
