tambah halaman laporan

--- a/profile.html
+++ b/profile.html
@@ -66,6 +66,13 @@
                         <span class="flex-1 text-base font-medium text-gray-800">Metode Pembayaran</span>
                         <svg class="text-gray-400" xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256"><path d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"></path></svg>
                     </div>
+                    
+                    <!-- Laporan (Reports) -->
+                    <div id="laporan-card" class="flex items-center gap-4 bg-white p-4 rounded-xl shadow-sm cursor-pointer border border-gray-200 hover:border-[#683fe4] transition-colors">
+                        <svg class="text-gray-500" xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M213.66,82.34l-56-56A8,8,0,0,0,152,24H56A16,16,0,0,0,40,40V216a16,16,0,0,0,16,16H200a16,16,0,0,0,16-16V88A8,8,0,0,0,213.66,82.34ZM160,51.31,188.69,80H160ZM200,216H56V40h88V88a8,8,0,0,0,8,8h48V216Zm-42.34-61.66a8,8,0,0,1,0,11.32l-24,24a8,8,0,0,1-11.32,0l-24-24a8,8,0,0,1,11.32-11.32L120,164.69V120a8,8,0,0,1,16,0v44.69l10.34-10.35A8,8,0,0,1,157.66,154.34Z"></path></svg>
+                        <span class="flex-1 text-base font-medium text-gray-800">Laporan</span>
+                        <svg class="text-gray-400" xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256"><path d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"></path></svg>
+                    </div>
                 </div>
 
                 <div class="px-4 py-6">
