merubah pesan whatsaap ke dinamis

--- a/app-settings.html
+++ b/app-settings.html
@@ -240,6 +240,73 @@
                 </div>
             </div>
 
+            <!-- Section: WhatsApp Notification Settings -->
+            <div class="bg-white p-4 rounded-xl shadow-sm border border-gray-200">
+                <h3 class="text-[#110e1b] font-semibold mb-3 flex items-center gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256"><path d="M187.58,144.84l-32-16a8,8,0,0,0-8,.5l-14.69,9.8a40.55,40.55,0,0,1-16-16l9.8-14.69a8,8,0,0,0,.5-8l-16-32A8,8,0,0,0,104,64a40,40,0,0,0-40,40,88.1,88.1,0,0,0,88,88,40,40,0,0,0,40-40A8,8,0,0,0,187.58,144.84ZM152,176a72.08,72.08,0,0,1-72-72A24,24,0,0,1,99.29,80.46l11.48,23L101,118a8,8,0,0,0-.73,7.51,56.47,56.47,0,0,0,30.15,30.15A8,8,0,0,0,138,155l14.61-9.74,23,11.48A24,24,0,0,1,152,176ZM128,24A104,104,0,0,0,36.18,176.88L24.83,210.93a16,16,0,0,0,20.24,20.24l34.05-11.35A104,104,0,1,0,128,24Zm0,192a87.87,87.87,0,0,1-44.06-11.81,8,8,0,0,0-6.54-.67L40,216,52.47,178.6a8,8,0,0,0-.66-6.54A88,88,0,1,1,128,216Z"></path></svg>
+                    Notifikasi WhatsApp
+                </h3>
+                
+                <!-- Enable/Disable Auto Notification -->
+                <div class="mb-4 p-3 bg-gray-50 rounded-lg">
+                    <label class="flex items-center justify-between cursor-pointer">
+                        <div>
+                            <p class="text-[#110e1b] text-sm font-medium">Notifikasi Otomatis</p>
+                            <p class="text-xs text-gray-500">Kirim WhatsApp otomatis saat pembayaran diterima</p>
+                        </div>
+                        <div class="relative">
+                            <input type="checkbox" id="auto-notification-toggle" class="sr-only peer">
+                            <div class="w-11 h-6 bg-gray-300 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-purple-300 rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-[#683fe4]"></div>
+                        </div>
+                    </label>
+                </div>
+
+                <!-- App URL -->
+                <label class="flex flex-col mb-4">
+                    <p class="text-[#110e1b] text-sm font-medium pb-1">URL Aplikasi</p>
+                    <input id="app-url-input" class="form-input w-full rounded-lg text-[#110e1b] border border-[#d6d0e7] bg-white h-10 p-2 text-sm" placeholder="http://selinggonet.netlify.app/" />
+                    <small class="text-xs text-gray-400 mt-1">URL untuk login pelanggan di pesan WhatsApp</small>
+                </label>
+
+                <!-- Template Pembayaran Lunas -->
+                <div class="mb-4">
+                    <label class="flex flex-col">
+                        <p class="text-[#110e1b] text-sm font-medium pb-1">Template Pembayaran Lunas</p>
+                        <textarea id="template-payment-full" class="form-input w-full rounded-lg text-[#110e1b] border border-[#d6d0e7] bg-white p-2 text-sm font-mono" rows="12" placeholder="Template pesan..."></textarea>
+                        <small class="text-xs text-gray-400 mt-1">
+                            Variabel: {nama_pelanggan}, {idpl}, {periode}, {total_tagihan}, {metode_pembayaran}, {app_url}, {email_pelanggan}
+                        </small>
+                    </label>
+                </div>
+
+                <!-- Template Pembayaran Cicilan -->
+                <div class="mb-4">
+                    <label class="flex flex-col">
+                        <p class="text-[#110e1b] text-sm font-medium pb-1">Template Pembayaran Cicilan</p>
+                        <textarea id="template-payment-installment" class="form-input w-full rounded-lg text-[#110e1b] border border-[#d6d0e7] bg-white p-2 text-sm font-mono" rows="12" placeholder="Template pesan..."></textarea>
+                        <small class="text-xs text-gray-400 mt-1">
+                            Variabel: {nama_pelanggan}, {idpl}, {periode}, {jumlah_dibayar}, {sisa_tagihan}, {metode_pembayaran}, {app_url}, {email_pelanggan}
+                        </small>
+                    </label>
+                </div>
+
+                <!-- Template Pesan Custom -->
+                <div class="mb-4">
+                    <label class="flex flex-col">
+                        <p class="text-[#110e1b] text-sm font-medium pb-1">Template Pesan Manual</p>
+                        <textarea id="template-custom-message" class="form-input w-full rounded-lg text-[#110e1b] border border-[#d6d0e7] bg-white p-2 text-sm font-mono" rows="8" placeholder="Template pesan..."></textarea>
+                        <small class="text-xs text-gray-400 mt-1">
+                            Variabel: {nama_pelanggan}, {idpl}, {pesan_custom}
+                        </small>
+                    </label>
+                </div>
+
+                <!-- Reset to Default Button -->
+                <button id="reset-whatsapp-templates-btn" class="w-full px-4 py-2 bg-gray-100 text-gray-700 rounded-lg text-sm font-semibold hover:bg-gray-200 transition-colors">
+                    Reset ke Template Default
+                </button>
+            </div>
+
             <!-- Action Buttons -->
             <div class="px-4 py-6 grid grid-cols-2 gap-3">
                 <button id="settings-cancel-btn" class="w-full rounded-lg h-12 px-5 bg-[#eae8f3] text-[#110e1b] text-base font-bold hover:bg-[#d6d0e7] transition-colors">CANCEL</button>
