genieacs fix tampilan password

--- a/ganti-wifi.html
+++ b/ganti-wifi.html
@@ -61,6 +61,13 @@
                             </div>
                         </div>
                         <div class="flex items-center gap-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="text-gray-400" viewBox="0 0 16 16"><path d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.354.146H7.465A4 4 0 0 1 0 8zm4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h4.63l.894.894a.5.5 0 0 1-.353.854H7.163A3 3 0 1 0 4 5z"/><path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/></svg>
+                            <div class="flex-1">
+                                <p class="text-xs text-gray-500">Password WiFi</p>
+                                <p id="current-password" class="text-sm font-medium text-gray-800">Memuat...</p>
+                            </div>
+                        </div>
+                        <div class="flex items-center gap-2">
                             <svg class="text-gray-400" xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" fill="currentColor" viewBox="0 0 256 256"><path d="M48,56V200a8,8,0,0,1-16,0V56a8,8,0,0,1,16,0Zm84,54.5L112,117V96a8,8,0,0,0-16,0v21l-20-6.49a8,8,0,0,0-4.95,15.22L96,136.5v35l-20-6.49a8,8,0,0,0-4.95,15.22l24,7.79a8.13,8.13,0,0,0,2.48.4,8,8,0,0,0,8-8V144.5l20,6.49A8.13,8.13,0,0,0,128,151a8,8,0,0,0,2.48-15.6L112,128.5V93l18.52,6a8.13,8.13,0,0,0,2.48.4,8,8,0,0,0,2.48-15.6ZM246,115.64A8,8,0,0,0,236,110.36l-20,6.49V93l18.52,6a8.13,8.13,0,0,0,2.48.4,8,8,0,0,0,2.48-15.6L216,76.5V56a8,8,0,0,0-16,0v21l-20-6.49a8,8,0,0,0-4.95,15.22L200,96.5v35l-20-6.49a8,8,0,0,0-4.95,15.22l24,7.79a8.13,8.13,0,0,0,2.48.4,8,8,0,0,0,8-8V104.5l20,6.49A8,8,0,0,0,246,115.64Z"></path></svg>
                             <div class="flex-1">
                                 <p class="text-xs text-gray-500">IP Address</p>
