--- a/faq_wifi_modem.html
+++ b/faq_wifi_modem.html
@@ -47,10 +47,9 @@
         }
     </style>
 </head>
-<body class="font-display">
-    <div class="relative flex h-auto min-h-screen w-full flex-col bg-background-light dark:bg-background-dark group/design-root overflow-x-hidden">
-        <!-- Top App Bar -->
-        <div class="flex items-center bg-background-light dark:bg-background-dark p-4 pb-2 justify-between">
+<body class="font-display" style="overflow-x: hidden;"> <div class="relative flex h-auto min-h-screen w-full flex-col bg-background-light dark:bg-background-dark group/design-root">
+        
+        <div class="flex items-center bg-background-light dark:bg-background-dark p-4 pb-2 justify-between sticky top-0 z-30 shadow-sm">
             <button class="text-slate-800 dark:text-slate-200 flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-slate-500/10 transition-colors" onclick="window.history.back()">
                 <span class="material-symbols-outlined">arrow_back</span>
             </button>
